--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,13 @@
-theme: jekyll-theme-minimal
-title: Matthijs' homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Matthijs Boeree # your name (or website title) here
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
+description: > # your text below (remove <br> elements if you don't need line breaks)
+  First description 
+  <br><br>
+  Second description 
+  <br><br>
+  <a href="https://www.linkedin.com/in/matthijsboeree/">View My LinkedIn Profile</a> 
+
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme
+#google_analytics: UA-000000-0 # your Google Analytics tracking ID here
